--- a/SearchInterface/FrontendReact/ssdbui/src/App.css
+++ b/SearchInterface/FrontendReact/ssdbui/src/App.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique+B1&display=swap');
+
+
+
 .App {
   text-align: center;
 }
@@ -18,3 +22,41 @@
   color: #61dafb;
 }
 
+.header{
+  font-family: "Shippori Antique B1", sans-serif;
+  padding: 10px;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 400;
+  font-style: normal;
+  margin: 0px;
+}
+
+.buttons {
+  font-family: "Shippori Antique B1", sans-serif;
+  padding: 8px 12px; 
+  text-align: center;
+  border-radius: 8px; 
+  background: linear-gradient(135deg, rgb(197, 197, 226), rgb(170, 170, 215)); 
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); 
+  border: none; 
+  cursor: pointer; 
+  transition: all 0.2s ease-in-out; 
+  margin: 6px;
+}
+
+.buttons:hover {
+  background: linear-gradient(135deg, rgb(180, 180, 220), rgb(150, 150, 200));
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px);
+}
+
+.page-flow{
+  font-family: "Shippori Antique B1", sans-serif;
+  padding: 5px;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 100;
+  font-style: normal;
+  margin: 0px;
+}
